--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
+.close {
+  position: absolute;
+  right: 2rem;
+  top: .4rem;
+  width: 16px;
+  height: 16px;
+  opacity: 0.3;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.close:hover {
+  opacity: 1;
+  cursor: pointer;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.close:before,
+.close:after {
+  position: absolute;
+  left: 15px;
+  content: ' ';
+  height: 1.5rem;
+  width: .2rem;
+  background-color: white;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.close:before {
+  transform: rotate(45deg);
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.close:after {
+  transform: rotate(-45deg);
 }
