--- a/client/src/App.css
+++ b/client/src/App.css
@@ -29,3 +29,68 @@
 .close:after {
   transform: rotate(-45deg);
 }
+
+.cardBackGround {
+  width: 18.5vw;
+  height: 21vh;
+  background-color: #4640DE;
+
+  border-radius: 24px;
+  justify-content: space-between;
+  overflow: hidden;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.cardBackGround:before {
+  border-radius: 10px;
+  content: ' ';
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 18.5vw;
+  height: 21vh;
+  opacity: 1;
+  background-image: url('../public/Background.png');
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  background-size: cover;
+}
+
+.ujCardBackGround {
+  width: 18.5vw;
+  height: 21.5vh;
+  background: #4640DE;
+  border-radius: 24px;
+  justify-content: space-between;
+  overflow: hidden;
+  background: cardColor;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  padding: .4vw .4vw;
+  margin: .4rem;
+}
+
+.ujCardBackGround:before {
+  border-radius: 10px;
+  content: ' ';
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 18.5vw;
+  height: 21vh;
+  opacity: 1;
+  background-image: url('../public/Background.png');
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  background-size: cover;
+}
+
+.SaveJobButton {
+  margin-left: auto;
+  margin-right: .5vw;
+  margin-top: .5vw;
+  width: 15px;
+  height: 17px;
+  z-index: 1
+}
