--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,27 +1,3 @@
-.close {
-  position: absolute;
-  right: 2rem;
-  top: .4rem;
-  width: 16px;
-  height: 16px;
-  opacity: 0.3;
-}
-
-.close:hover {
-  opacity: 1;
-  cursor: pointer;
-}
-
-.close:before,
-.close:after {
-  position: absolute;
-  left: 15px;
-  content: ' ';
-  height: 1.5rem;
-  width: .2rem;
-  background-color: white;
-}
-
 .close:before {
   transform: rotate(45deg);
 }
@@ -93,4 +69,49 @@
   width: 15px;
   height: 17px;
   z-index: 1
+}
+
+.SaveJobButton:hover {
+  opacity: .5;
+}
+
+.EditJobButton {
+  margin-left: .5vw;
+  margin-right: auto;
+  margin-top: .2vw;
+  width: 22px;
+  height: 25px;
+  z-index: 1
+}
+
+.EditJobButton:hover {
+  opacity: .5;
+}
+
+.NotesButton {
+  margin-left: auto;
+  margin-right: .5vw;
+  margin-top: .5vw;
+  width: 15px;
+  height: 17px;
+  z-index: 10;
+}
+
+.NotesButton:hover {
+  opacity: .5;
+
+}
+
+.DeleteButton {
+  margin-left: auto;
+  margin-right: .5vw;
+  margin-top: .5vw;
+  width: 15px;
+  height: 17px;
+  z-index: 10;
+}
+
+.DeleteButton:hover {
+  opacity: .5;
+
 }
