--- a/client/src/App.css
+++ b/client/src/App.css
@@ -66,52 +66,54 @@
   margin-left: auto;
   margin-right: .5vw;
   margin-top: .5vw;
-  width: 15px;
+  width: 13px;
   height: 17px;
   z-index: 1
 }
 
 .SaveJobButton:hover {
   opacity: .5;
+  cursor: default;
 }
 
 .EditJobButton {
   margin-left: .5vw;
   margin-right: auto;
   margin-top: .2vw;
-  width: 22px;
-  height: 25px;
+  width: 18px;
+  height: 22px;
   z-index: 1
 }
 
 .EditJobButton:hover {
   opacity: .5;
+  cursor: default;
 }
 
 .NotesButton {
   margin-left: auto;
   margin-right: .5vw;
   margin-top: .5vw;
-  width: 15px;
-  height: 17px;
+  width: 16px;
+  height: 20px;
   z-index: 10;
 }
 
 .NotesButton:hover {
   opacity: .5;
-
+  cursor: default;
 }
 
 .DeleteButton {
   margin-left: auto;
   margin-right: .5vw;
   margin-top: .5vw;
-  width: 15px;
-  height: 17px;
-  z-index: 10;
+  width: 18px;
+  height: 22px;
+  z-index: 100;
 }
 
 .DeleteButton:hover {
   opacity: .5;
-
+  cursor: default;
 }
