--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,11 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  @font-face {
+  font-family: "Poppins";
+  src: url("font-files/Poppins-Bold.ttf") format("ttf"),
+       url("font-files/Poppins-Regular.ttf") format("ttf"),
+       url("font-files/Poppins-SemiBold.ttf") format("ttf");
+}
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
